<resources>
    <string name="app_name">WayMap</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="back_to_welcome">Back to Welcome</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="Back_to_welcome">Back to Welcome</string>
    <string name="re_enter_password">Re-Enter password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login1">Login</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="name1">name!</string>
    <string name="password2">password</string>
    <string name="password1">password!</string>
    <string name="emai">emai</string>
    <string name="menu_icon" />
    <string name="app_logo">1</string>
    <string name="more">MORE</string>
    <string name="multi_stop_route">Multi Stop Route</string>
    <string name="search_icon">2</string>
    <string name="map_icon">3</string>
    <string name="camera_icon">3</string>
    <string name="saved_icon">4</string>
    <string name="updates_icon">5</string>
    <string name="waymap">WayMap</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="menu">Menu</string>
    <string name="logo">Logo</string>
    <string name="powerd_by_dosh">Powerd by DOSH</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="saved">Saved</string>
    <string name="updates">Updates</string>
    <string name="todoo">TODO</string>
    <string name="waymapp">WayMap</string>
    <string name="live_navigation">Live Navigation</string>
    <string name="home">HOME</string>
    <string name="More">MORE</string>
    <string name="todooo">TODO</string>
    <string name="back">Back</string>
    <string name="calculate">Calculate</string>
    <string name="distance_calculator">Distance Calculator</string>
    <string name="kilometers_km">Kilometers (km)</string>
    <string name="todou">TODO</string>
    <string name="miles_mi">Miles (mi)</string>
    <string name="powered_by_dosh">powered_by DOSH</string>
    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="ttodo">TODO</string>
    <string name="social_routes">Social Routes</string>
    <string name="MORE">More</string>
    <string name="Back"><![CDATA[< back]]></string>
    <string name="distance_km">Distance (km)</string>
    <string name="fuel_rate_per_liter">Fuel Rate (per Liter)</string>
    <string name="result_will_be_shown_here">Result will be shown here</string>
    <string name="extra">EXTRA</string>
    <string name="local_dishes">Local Dishes</string>
    <string name="hot">HOT</string>
    <string name="spicy">SPICY</string>
    <string-array name="vehicle_types">
        <item>Car</item>
        <item>Van</item>
        <item>Bus</item>
    </string-array>
    <string name="google_maps_key">YOUR_GOOGLE_MAPS_API_KEY</string>
    <string name="number_of_adults">Number of Adults</string>
    <string name="special_notes">Special Notes:</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="date">Date:</string>
    <string name="destination">Destination:</string>
    <string name="meals">Meals:</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="lkr">LKR</string>
    <string name="currency">Currency</string>
    <string name="calculate_currency">Calculate Currency</string>
</resources>