<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center">

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="113dp"
        android:layout_height="58dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="113dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="@color/material_dynamic_primary20"
        android:padding="16dp"
        android:text="@string/login1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSignup"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="453dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="204dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        app:srcCompat="@drawable/q" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="643dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="69dp"
        android:text="@string/powered_by_dosh"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="410dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
