<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <!-- Navigation Bar with Back Button -->
    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#1E3A5F"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#1E3A5F"
        app:layout_constraintTop_toBottomOf="@id/navigationBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"
            android:contentDescription="@string/menu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/waymapp"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_marginStart="8dp" />

        <ImageView
            style="?android:attr/buttonBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/q"
            android:contentDescription="@string/logo" />
    </LinearLayout>

    <!-- Tabs -->
    <LinearLayout
        android:id="@+id/tabs"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#00254D">

        <Button
            android:id="@+id/homeButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tab_selector"
            android:text="@string/home"
            android:textColor="#FFFFFF"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/moreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/More"
            android:textColor="#FFFFFF"
            android:background="@drawable/tab_selector"
            tools:ignore="ButtonStyle,VisualLintButtonSize" />
    </LinearLayout>

    <!-- Cards -->

    <!-- Bottom Navigation -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardsGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintVertical_bias="1.0">

        <!-- Distance Calculator -->

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="165dp"
            android:layout_height="92dp"


            android:background="@color/material_dynamic_primary20"
            android:contentDescription="TODO"
            android:gravity="center"
            android:importantForAccessibility="no"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.609"
            tools:ignore="DuplicateIds,HardcodedText">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:scaleType="centerInside"
                android:src="@drawable/wwwdownload__1_"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Scenic stops"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="165dp"


            android:layout_height="92dp"
            android:background="@color/material_dynamic_primary20"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.402">

            <ImageView
                android:id="@+id/Imagebutton"
                android:layout_width="50dp"

                android:layout_height="50dp"
                android:scaleType="centerInside"
                android:src="@drawable/_1images__1_"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Distance Calculator"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="165dp"
            android:layout_height="92dp"


            android:background="@color/material_dynamic_primary20"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.404"
            tools:ignore="VisualLintBounds">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:scaleType="centerInside"
                android:src="@drawable/ttimages__1_"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Routep planner"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="165dp"
            android:layout_height="92dp"


            android:background="@color/material_dynamic_primary20"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.873"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.609">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:scaleType="centerInside"
                android:src="@drawable/_2147da28ae48c0a5e140f95_icon"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Live Navigation"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <!-- Add other icons similarly -->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#00254D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_search"
            android:contentDescription="@string/search" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_map"
            android:contentDescription="@string/map" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_camera"
            android:contentDescription="@string/camera" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_saved"
            android:contentDescription="@string/saved" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_updates"
            android:contentDescription="@string/updates" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
