<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fr">

    <!-- Back Button -->

    <!-- Food Text View -->

    <!-- Main Image -->

    <Button
        android:id="@+id/backfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/black"
        android:text="Back"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:icon="@drawable/icons8_back_64__1_"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints" />

    <TextView
        android:id="@+id/foodtextvuew"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        android:text="@string/local_dishes"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backfood"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="230dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/mildbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backfood"
        app:srcCompat="@drawable/s1p_"
        tools:ignore="ContentDescription" />

    <!-- Mild Button -->
    <Button
        android:id="@+id/mildbutton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="MILD"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/spicybutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <!-- Spicy Button -->
    <Button
        android:id="@+id/spicybutton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/spicy"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mildbutton"
        app:layout_constraintTop_toBottomOf="@id/imageView6"
        tools:ignore="VisualLintButtonSize" />

    <!-- Hot Button -->
    <Button
        android:id="@+id/hotbutton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/hot"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/extrabutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mildbutton"
        tools:ignore="VisualLintButtonSize" />

    <!-- Extra Button -->
    <Button
        android:id="@+id/extrabutton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/extra"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hotbutton"
        app:layout_constraintTop_toBottomOf="@id/spicybutton"
        tools:ignore="VisualLintButtonSize" />

    <!-- Bottom Image -->
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hotbutton"
        app:srcCompat="@drawable/_234"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
